--- a/less/global/variables.less
+++ b/less/global/variables.less
@@ -8,10 +8,13 @@
 @color-category: #56c3b2;
 @color-text: #444444;
 @color-title: #000000;
-@color-placeholder: #d2d2d2;
+@color-icon-nav: #d3d2d2;
 @color-hover: #8d8d8d;
 @color-active: #cacaca;
 @color-border: #ececec;
 @color-social: #231f20;
 @color-icon: #46c1ae;
 @color-down: #bde3dd;
+@color-down-nav: #d0f1ea;
+@color-hover-logo: #666666;
+@color-active-logo: #b2b2b2;
