--- a/less/blocks/featured.less
+++ b/less/blocks/featured.less
@@ -4,7 +4,7 @@
 
 .featured__wrapper {
   .container();
-  padding: 30px;
+  padding: 27px 30px 30px 30px;
 }
 
 .featured__title {
@@ -25,7 +25,7 @@
 
 .featured__description {
   .text(15px; 20px; @color-text);
-  margin-bottom: 28px;
+  margin-bottom: 27px;
   border-collapse: collapse;
 
   & td {
