--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 26px 87px;;
+  padding: 26px 91px 26px 87px;
 }
 
 .social__link {
