--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -1,9 +1,19 @@
 .btn {
   .text(17px; 16px; @color-text; bold);
   display: block;
-  padding: 15px;
+  padding: 16px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
   border: 2px solid @color-text;
+  background-color: @color-body;
+
+  &:hover {
+    color: @color-body;
+    background-color: @color-text;
+  }
+
+  &:active {
+    color: @color-hover;
+  }
 }
