--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -16,7 +16,7 @@
   .text(15px; 30px; @color-text);
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-bottom: 9px;
 }
 
 .contacts__row {
@@ -24,12 +24,12 @@
 }
 
 .contacts__cell {
-  padding-bottom: 28px;
+  padding-bottom: 29px;
   vertical-align: top;
-}
 
-.contacts__cell:first-child {
-  width: 77px;
+  &:first-child {
+    width: 77px;
+  }
 }
 
 .contacts__address {
@@ -38,12 +38,27 @@
 }
 
 .contacts__link {
+  position: relative;
+  display: block;
   color: @color-text;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: @color-link;
+  }
 }
 
 .contacts__map {
   width: 100%;
   text-align: center;
+  font-size: 0;
+  line-height: 0;
 }
 
 .contacts__btn-wrapper {
@@ -57,7 +72,7 @@
     padding: 0;
     margin-bottom: 57px;
   }
-  
+
   .contacts__title {
     font-size: 43px;
   }
@@ -88,11 +103,11 @@
 }
 
 @media @desktop-widths {
-  
+
   .contacts {
     position: relative;
   }
-  
+
   .contacts__wrapper {
     display: flex;
     flex-direction: column;
