--- a/less/blocks/seo.less
+++ b/less/blocks/seo.less
@@ -1,5 +1,18 @@
 .seo {
+  position: relative;
 	width: 100%;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 23px;
+    background-image: url("../img/bg-zigzag-line.svg");
+    background-repeat: repeat-x;
+    background-size: 100% 100%;
+  }
 }
 
 .seo__wrapper {
