--- a/less/blocks/featured.less
+++ b/less/blocks/featured.less
@@ -51,7 +51,7 @@
 
   .featured__wrapper {
     position: relative;
-    padding: 60px 0;
+    padding: 37px 0 50px 0;
   }
 
   .featured__titles {
@@ -69,6 +69,7 @@
   .featured__info {
     .text(17px; 30px; @color-text);
     width: 290px;
+    padding: 43px 0 35px 0;
   }
 
   .featured__description {
@@ -77,7 +78,7 @@
 
   .featured__image-wrapper {
     position: absolute;
-    top: 120px;
+    top: 143px;
     left: 50%;
   }
 
@@ -87,6 +88,8 @@
 
   .featured__price {
     .text(20px; 24px; @color-text; bold);
+    padding-top: 28px;
+    padding-bottom: 34px;
   }
 }
 
