--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -1,11 +1,12 @@
 .social {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   padding: 26px 91px 26px 87px;
 }
 
 .social__link {
+  display: block;
   font-size: 0;
 }
 
@@ -34,7 +35,7 @@
 @media @tablet-widths {
 
   .social {
-    width: 143px;
-    padding: 26px 0;
+    width: 30%;
+    padding: 26px 31px 26px 28px;
   }
 }
