--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -84,10 +84,22 @@
 }
 
 .contacts__map {
+  position: relative;
   width: 100%;
   text-align: center;
   font-size: 0;
   line-height: 0;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 165px;
+    left: 50%;
+    width: 74px;
+    height: 105px;
+    margin-left: -37px;
+    background: url("../img/icon-map-pin.svg") no-repeat;
+  }
 }
 
 .contacts__btn-wrapper {
@@ -98,12 +110,23 @@
 @media @tablet-widths {
 
   .contacts__wrapper {
-    padding: 0;
-    margin-bottom: 57px;
+    position: relative;
+    padding: 60px 0 47px 0;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 72px;
+      right: 0;
+      width: 50px;
+      height: 85px;
+      background: url("../img/icon-flag.svg") no-repeat;
+    }
   }
 
   .contacts__title {
     font-size: 43px;
+    margin-bottom: 48px;
   }
 
   .contacts__info {
@@ -123,7 +146,7 @@
   .contacts__btn-wrapper {
     display: flex;
     justify-content: center;
-    padding: 57px;
+    padding: 55px 50px 57px 50px;
   }
 
   .contacts__btn {
