--- a/less/blocks/seo.less
+++ b/less/blocks/seo.less
@@ -76,7 +76,12 @@
 @media @tablet-widths {
 
   .seo__wrapper{
-    padding: 30px 0 60px 0;
+    padding: 70px 0 55px 0;
+  }
+
+  .seo__title {
+    margin: 0;
+    padding-bottom: 16px;
   }
 
   .seo__list {
@@ -91,7 +96,8 @@
 
   .seo__item {
     .text(20px; auto; @color-title; bold);
-    padding-right: 35px;
+    padding-right: 60px;
+    padding-bottom: 25px;
   }
 }
 
