--- a/less/blocks/featured.less
+++ b/less/blocks/featured.less
@@ -95,6 +95,11 @@
 
 @media @desktop-widths {
 
+  .featured__wrapper {
+    padding-top: 115px;
+    padding-bottom: 73px;
+  }
+
   .featured__titles {
     flex-direction: row-reverse;
     justify-content: flex-end;
@@ -109,12 +114,20 @@
     margin-left: 175px;
   }
 
+  .featured__info {
+    padding-bottom: 47px;
+  }
+
   .featured__image-wrapper {
-    top: 0;
+    top: 63px;
     z-index: -1;
   }
 
   .featured__buy {
     margin-left: 175px;
+  }
+
+  .featured__price {
+    padding-top: 82px;
   }
 }
