--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -53,7 +53,7 @@
 
   .page-footer__logo-block {
     display: block;
-    width: 30%;
+    width: 200px;
   }
 
   .page-footer__logo {
@@ -73,7 +73,7 @@
   }
 
   .page-footer__copyright {
-    width: 30%;
+    width: 200px;
     padding: 0;
   }
 
