--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -42,6 +42,7 @@
   font-size: 0;
   background: @color-body;
   border: 1px solid @color-border;
+  cursor: pointer;
 
   &:hover {
     fill: @color-hover-logo;
@@ -127,7 +128,12 @@
 
   .reviews__wrapper {
     width: 1050px;
-    padding-left: 175px;
+    padding: 71px 0 95px 175px;
+  }
+
+  .reviews__item {
+    padding-right: 80px;
+    margin-bottom: 38px;
   }
 
   .reviews__list cite {
@@ -139,6 +145,7 @@
   }
 
   .reviews__btn {
+    right: 0;
     width: 175px;
   }
 }
