--- a/less/blocks/seo.less
+++ b/less/blocks/seo.less
@@ -104,11 +104,10 @@
 @media @desktop-widths {
 
   .seo__wrapper {
-    margin-left: 175px;
-    margin-right: 175px;
+    padding: 82px 175px 62px 175px;
   }
 
   .seo__item {
-    padding-right: 50px;
+    padding-right: 80px;
   }
 }
