--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -129,7 +129,7 @@
 
   .main-nav__item--search {
     order: 4;
-    width: 83px;
+    width: 85px;
     border-right: 1px solid @color-border;
     border-left: 1px solid @color-border;
     border-bottom: 1px solid @color-border;
@@ -141,7 +141,7 @@
 
   .main-nav__item--basket {
     order: 5;
-    width: 315px;
+    width: 317px;
     text-align: right;
     border-bottom: 1px solid @color-border;
 
@@ -218,25 +218,24 @@
   .main-nav__link-new {
     font-size: 15px;
     padding-left: 50px;
-    padding-top: 23px;
+    padding-top: 17px;
   }
 
   .main-nav__link-sale {
     font-size: 15px;
     padding-left: 35px;
-    padding-top: 23px;
+    padding-top: 17px;
   }
 
   .main-nav__item--catalog {
     order: 1;
-    width: 235px;
+    width: 234px;
     border-bottom: 1px solid @color-border;
     border-right: 1px solid @color-border;
 
     & .main-nav__link {
       font-size: 17px;
-      padding-top: 30px;
-      padding-left: 50px;
+      padding: 25px 15px 33px 50px;
     }
   }
 
@@ -247,14 +246,14 @@
 
     & .main-nav__link {
       font-size: 17px;
-      padding-top: 30px;
+      padding-top: 25px;
       padding-left: 35px;
     }
   }
 
   .main-nav__logo {
     flex-grow: 1;
-    width: 250px;
+    width: 200px;
     padding: 0;
 
     & .main-nav__link {
@@ -265,6 +264,13 @@
       height: 74px;
       padding: 0;
       transform: translateX(-50%);
+    }
+  }
+
+  .main-nav__item--basket {
+
+    & .main-nav__link {
+      padding-top: 25px;
     }
   }
 
