--- a/less/blocks/modal.less
+++ b/less/blocks/modal.less
@@ -49,6 +49,10 @@
   border-color: @color-legend;
 }
 
+.modal__radio-label:hover {
+  border-color: @color-modal;
+}
+
 .modal__btn{
   .text(17px; 16px; @color-body; bold);
   padding: 18px;
