--- a/less/blocks/catalog-item.less
+++ b/less/blocks/catalog-item.less
@@ -18,7 +18,7 @@
 
 .catalog-item__wrapper {
   .text(13px; 30px; @color-text);
-  padding: 27px 30px 24px 30px;
+  padding: 27px 30px 23px 30px;
   border: 1px solid #ededed;
 }
 
@@ -38,7 +38,7 @@
 
 .catalog-item__buy {
   position: relative;
-  padding-top: 18px;
+  padding-top: 17px;
   margin-top: 20px;
   border-top: 1px solid @color-border;
 }
@@ -53,8 +53,8 @@
 
 .catalog-item__basket {
   position: absolute;
-  top: 26px;
-  right: 0;
+  top: 21px;
+  right: -4px;
   width: 21px;
   height: 21px;
   font-size: 0;
@@ -82,7 +82,7 @@
     flex-direction: column;
     justify-content: space-between;
     width: 50%;
-    padding: 28px;
+    padding: 26px 28px 23px 25px;
   }
 
   .catalog-item__title {
@@ -91,6 +91,11 @@
 
   .catalog-item__price {
     .text(17px; 24px; @color-title; bold);
+    padding-left: 5px;
+  }
+
+  .catalog-item__basket {
+    right: 4px;
   }
 }
 
