--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -3,21 +3,35 @@
 }
 
 .catalog__header {
-  padding: 55px 0;
+  padding: 52px 0 58px 0;
   text-align: center;
   background: @color-footer;
 }
 
 .catalog__wrapper {
   .container();
-  padding: 30px;
+  padding: 30px 30px 0 30px;
 }
 
 @media @tablet-widths {
 
   .catalog__header {
-    padding: 42px 0;
-    margin-bottom: 85px;
+    position: relative;
+    padding-top: 8px;
+    padding-bottom: 58px;
+    margin-bottom: 72px;
+
+    ::after {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    height: 36px;
+    width: 100%;
+    background-image: url("../img/bg-zigzag-fill.svg");
+    background-size: 100% 100%;
+    background-repeat: repeat-x;
+  }
   }
 
   .catalog__wrapper {
