--- a/less/blocks/manufacture.less
+++ b/less/blocks/manufacture.less
@@ -7,9 +7,30 @@
   padding: 0 30px 58px 30px;
 }
 
+.manufacture__wrapper-hover {
+
+  &:hover {
+    box-shadow: 0 5px 5px @color-shadow;
+  }
+
+  &:active {
+    box-shadow: 0 3px 4px @color-shadow;
+  }
+}
+
 .manufacture__header {
-  padding: 14px 30px 12px 90px;
+  position: relative;
+  padding: 10px 30px 9px 90px;
   border: 1px solid @color-border;
+
+  &::before {
+    content: url("../img/icon-video.svg");
+    position: absolute;
+    top: 30px;
+    left: 33px;
+    width: 32px;
+    height: 32px;
+  }
 }
 
 .manufacture__title {
@@ -17,13 +38,33 @@
 }
 
 .manufacture__video {
+  position: relative;
   font-size: 0;
   line-height: 0;
+
+  &:before {
+    content: url("../img/icon-play.svg");
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 101px;
+    height: 78px;
+    transform: translate(-50%, -45%);
+  }
+
+  &:hover::before {
+    transform: translate(-50%, -45%) scale(1.2);
+  }
+
+  &:active::before {
+    opacity: 0.8;
+    transform: translate(-50%, -45%) scale(0.8);
+  }
 }
 
 .manufacture__caption {
   .text(13px; 24px; @color-text);
-  padding: 20px 33px 32px 33px;
+  padding: 13px 33px 32px 33px;
   border: 1px solid @color-border;
 }
 
@@ -34,16 +75,24 @@
 @media @tablet-widths {
 
   .manufacture__wrapper {
-    display: flex;
-    flex-direction: column;
     padding: 0;
     margin-bottom: 63px;
   }
 
+  .manufacture__wrapper-hover {
+    display: flex;
+    flex-direction: column;
+  }
+
   .manufacture__header {
     order: 1;
-    padding: 7px 30px 0 108px;
+    padding: 22px 30px 0 105px;
     border-bottom: none;
+
+    &::before {
+      top: 32px;
+      left: 39px;
+    }
   }
 
   .manufacture__title {
@@ -53,7 +102,7 @@
   .manufacture__caption {
     .text(15px; 30px; @color-text);
     order: 2;
-    padding: 0 30px 45px 30px;
+    padding: 0 40px 43px 40px;
     border-top: none;
   }
 
@@ -65,10 +114,13 @@
 @media @desktop-widths {
 
   .manufacture__wrapper {
+    margin-bottom: 105px;
+  }
+
+  .manufacture__wrapper-hover {
     position: relative;
     justify-content: space-between;
     align-items: flex-end;
-    margin-bottom: 105px;
   }
 
   .manufacture__header {
