--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -27,17 +27,20 @@
 }
 
 .page-header__toggle-nav {
-  position: absolute;
-  z-index: 3;
-  top: 0;
-  right: 0;
-  width: 80px;
-  height: 100%;
   font-size: 0;
-  cursor: pointer;
 }
 
 @media @mobile-widths-only {
+
+  .page-header__toggle-nav {
+    position: absolute;
+    z-index: 3;
+    top: 0;
+    right: 0;
+    width: 80px;
+    height: 100%;
+    cursor: pointer;
+  }
 
   .page-header__toggle {
     position: relative;
@@ -116,11 +119,11 @@
 
   .page-header__back-color {
     position: absolute;
-    top: 88px;
+    top: 86px;
     left: 0;
     z-index: -1;
     width: 100%;
-    height: 80%;
+    height: 200px;
     background-color: @color-footer;
     border-top: 1px solid @color-border;
   }
