--- a/less/blocks/catalog-item.less
+++ b/less/blocks/catalog-item.less
@@ -109,14 +109,19 @@
   .catalog-item__wrapper {
     flex-grow: 1;
     width: 100%;
-    padding: 27px 30px 24px 30px;
+    padding: 25px 26px 24px 26px;
   }
 
   .catalog-item__title {
-    margin-bottom: 2px
+    margin-bottom: 5px;
   }
 
   .catalog-item__buy {
-    margin-top: 15px;
+    padding-top: 19px;
+    margin-top: 14px;
+  }
+
+  .catalog-item__price {
+    padding-left: 0;
   }
 }
