--- a/less/blocks/manufacture.less
+++ b/less/blocks/manufacture.less
@@ -125,21 +125,43 @@
 
   .manufacture__header {
     width: 369px;
-    padding: 84px 130px 0 79px;
+    padding: 81px 130px 0 79px;
+
+    &::before {
+      top: 43px;
+      left: 80px;
+    }
   }
 
   .manufacture__title {
-    margin-bottom: 12px;
+    margin-bottom: 15px;
   }
 
   .manufacture__video {
     position: absolute;
     top: 0;
     left: 0;
+
+    &:before {
+    transform: translate(-40%, -50%);
+  }
+
+  &:hover::before {
+    transform: translate(-40%, -50%) scale(1.2);
+  }
+
+  &:active::before {
+    opacity: 0.8;
+    transform: translate(-40%, -50%) scale(0.8);
+  }
   }
 
   .manufacture__caption {
     width: 369px;
-    padding: 0 56px 59px 79px;
+    padding: 0 56px 57px 79px;
+  }
+
+  .manufacture__btn {
+    margin-top: 49px;
   }
 }
