--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -16,14 +16,14 @@
   padding: 20px 60px;
   text-align: center;
   background-color: @color-body;
-}
 
-.page-header__logo:hover .page-header__logo-header {
-  fill: @color-hover-logo;
-}
+  &:hover .page-header__logo-header {
+    fill: @color-hover-logo;
+  }
 
-.page-header__logo:active .page-header__logo-header {
-  fill: @color-active-logo;
+  &:active .page-header__logo-header {
+    fill: @color-active-logo;
+  }
 }
 
 .page-header__toggle-nav {
