--- a/less/global/mixins.less
+++ b/less/global/mixins.less
@@ -17,3 +17,16 @@
   font-weight: @font-weight;
   color: @color;
 }
+
+.fieldset-border() {
+  margin: 0;
+  border: none;
+}
+
+.input-text(){
+  width: 100%;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 2px solid @color-title;
+}
