form pixel+fix catalog

--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -21,7 +21,7 @@
     padding-bottom: 58px;
     margin-bottom: 72px;
 
-    ::after {
+    &::after {
       content: "";
       position: absolute;
       bottom: -10px;
