--- a/less/blocks/manufacture.less
+++ b/less/blocks/manufacture.less
@@ -45,20 +45,20 @@
   &:before {
     content: url("../img/icon-play.svg");
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 40px;
+    left: 80px;
     width: 101px;
     height: 78px;
-    transform: translate(-50%, -45%);
+    cursor: pointer;
   }
 
   &:hover::before {
-    transform: translate(-50%, -45%) scale(1.2);
+    transform: scale(1.2);
   }
 
   &:active::before {
     opacity: 0.8;
-    transform: translate(-50%, -45%) scale(0.8);
+    transform: scale(0.8);
   }
 }
 
@@ -97,6 +97,14 @@
 
   .manufacture__title {
     font-size: 20px;
+  }
+
+  .manufacture__video {
+
+    &::before {
+      top: 195px;
+      left: 286px;
+    }
   }
 
   .manufacture__caption {
@@ -142,18 +150,10 @@
     top: 0;
     left: 0;
 
-    &:before {
-    transform: translate(-40%, -50%);
-  }
-
-  &:hover::before {
-    transform: translate(-40%, -50%) scale(1.2);
-  }
-
-  &:active::before {
-    opacity: 0.8;
-    transform: translate(-40%, -50%) scale(0.8);
-  }
+    &::before {
+      top: 190px;
+      left: 300px;
+    }
   }
 
   .manufacture__caption {
