--- a/less/blocks/order.less
+++ b/less/blocks/order.less
@@ -22,8 +22,22 @@
 @media @tablet-widths {
 
   .order__header {
-    padding: 42px 0;
-    margin-bottom: 85px;
+    position: relative;
+    padding-top: 5px;
+    padding-bottom: 60px;
+    margin-bottom: 66px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -10px;
+      left: 0;
+      display: block;
+      height: 36px;
+      width: 100%;
+      background-image: url("../img/bg-zigzag-fill.svg");
+      background-repeat: repeat-x;
+    }
   }
 
   .order__wrapper {
@@ -42,8 +56,9 @@
 @media @desktop-widths {
 
   .order__header {
-    padding: 55px 0;
-    margin-bottom: 145px;
+    padding-top: 0;
+    padding-bottom: 75px;
+    margin-bottom: 115px;
   }
 
   .order__subtitle {
