--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -7,11 +7,12 @@
     position: absolute;
     top: 7px;
     left: 0;
+    display: block;
     width: 100%;
-    height: 30px;
+    height: 25px;
     background-image: url("../img/bg-zigzag-line.svg");
     background-repeat: repeat-x;
-    background-size: 100%;
+    background-size: 80% 100%;
   }
 }
 
@@ -86,9 +87,11 @@
 .contacts__map {
   position: relative;
   width: 100%;
+  height: 457px;
   text-align: center;
   font-size: 0;
   line-height: 0;
+  background: url("../img/map-mobile@1x.jpg") no-repeat 50% 0;
 
   &::before {
     content: "";
@@ -99,6 +102,13 @@
     height: 105px;
     margin-left: -37px;
     background: url("../img/icon-map-pin.svg") no-repeat;
+  }
+}
+
+@media (min-resolution: 144dpi),
+(min-resolution: 1.5dppx) {
+  .contacts__map {
+    background-image: url("../img/map-mobile@2x.jpg");
   }
 }
 
@@ -140,6 +150,17 @@
   .contacts__address {
     width: 230px;
     padding: 0;
+  }
+
+  .contacts__map {
+    background-image: url("../img/map-tablet@1x.jpg");
+  }
+
+  @media (min-resolution: 144dpi),
+  (min-resolution: 1.5dppx) {
+    .contacts__map {
+      background-image: url("../img/map-tablet@2x.jpg");
+    }
   }
 
   .contacts__btn-wrapper {
@@ -189,9 +210,17 @@
     left: 50%;
     width: 525px;
     text-align: left;
+    background-image: url("../img/map-desktop@1x.jpg");
 
     &::before {
       margin-left: -26px;
+    }
+  }
+
+  @media (min-resolution: 144dpi),
+  (min-resolution: 1.5dppx) {
+    .contacts__map {
+      background-image: url("../img/map-desktop@2x.jpg");
     }
   }
 
