--- a/less/blocks/seo.less
+++ b/less/blocks/seo.less
@@ -8,10 +8,10 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 30px;
+    height: 25px;
     background-image: url("../img/bg-zigzag-line.svg");
     background-repeat: repeat-x;
-    background-size: 100%;
+    background-size: 80% 100%;
   }
 }
 
